--- a/src/components/ContactSection.css
+++ b/src/components/ContactSection.css
@@ -1,3 +1,14 @@
+textarea,
+input.text,
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+button,
+.input-checkbox {
+color: #2F2F2F;
+-webkit-appearance: none;
+border-radius: 0;
+}
 .contact-label p{
     width: 60%;
     margin: 0 auto;
